--- a/.github/workflows/yaml-error.yml
+++ b/.github/workflows/yaml-error.yml
@@ -3,5 +3,5 @@ on: push
 jobs:
   run:
     runs-on: ubuntu-latest
-      steps:                          # インデントが2文字ズレている！
+    steps:                          # インデントが2文字ズレている！(修正済み)
       - run: echo "YAML Syntax Error"
